--- a/sass/reviews.scss
+++ b/sass/reviews.scss
@@ -34,8 +34,8 @@
     }
 
     &__shape {
-        width: 15rem;
-        height: 15rem;
+        width: 10rem;
+        height: 10rem;
         float: left;
         shape-outside: circle(50% at 50% 50%);
         -webkit-shape-outside: circle(50% at 50% 50%);
